--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>tes</title>
+  <title>Learning Github</title>
+  <style>
+    body{
+      background-color:#e3e3e3;  
+    }
+    h1{
+      text-align:center;
+      color:blue;
+    }
+  </style>
 </head>
 <body>
   <h1>Hallo World</h1>
