--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
-<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Learning Github</title>
-  <style>
-    body{
-      background-color:#e3e3e3;  
-    }
-    h1{
-      text-align:center;
-      color:blue;
-    }
-  </style>
+	<meta charset="UTF-8">
+	<title>STL DesignWeek 2013</title>
+	<link rel="stylesheet" href="css/frag.css">
 </head>
 <body>
-  <h1>Hallo World</h1>
+	<header>
+		<div>
+			<h1><a href="#" title="STL DesignWeek 2013">stl <strong>design</strong>week</a></h1>
+			<nav class="nav">
+				<div class="kotak">
+					<div class="kotaknav">
+						<ul>
+							<li><a class="anav" href="#">home</a></li>
+							<li><a class="anav" href="#">about</a></li>
+							<li><a class="anav" href="#">sponsor</a></li>
+							<li><a class="anav" href="#">press</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+
+			<nav >
+				<ul>
+					<li><a href="#"><div class="bcd"><img src="img/fb.png" alt="fb"></div></a></li>
+					<li><a href="#"><div class="abc"><img src="img/twit.png" alt="twit"></div></a></li>		
+				</ul>
+			</nav>
+			<h2>September 23 - 29</h2>
+			<div>
+				<a href="#" title="STL DesignWeek 2013"><img class="logo" src="img/stl.png" alt="stl.png"></a>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
