--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>STL DesignWeek 2013</title>
-	<link rel="stylesheet" href="css/frag.css">
+	<link rel="stylesheet" href="frag.css">
 </head>
 <body>
 	<header>
