--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>STL DesignWeek 2013</title>
+	<title>$^&#^$@&@$</title>
 	<link rel="stylesheet" href="frag.css">
 </head>
 <body>
@@ -23,13 +23,13 @@
 
 			<nav >
 				<ul>
-					<li><a href="#"><div class="bcd"><img src="img/fb.png" alt="fb"></div></a></li>
-					<li><a href="#"><div class="abc"><img src="img/twit.png" alt="twit"></div></a></li>		
+					<li><a href="#"><div class="bcd"><img src="http://1.bp.blogspot.com/-8Xs_psAI6U0/UjTDHC8Io6I/AAAAAAAAAVQ/9DO2y148Pm0/s1600/fb.png" alt="fb"></div></a></li>
+					<li><a href="#"><div class="abc"><img src="http://4.bp.blogspot.com/-eNt9Ap2vxA8/UjTDGQS9x9I/AAAAAAAAAVI/UTPKp4_a9hc/s1600/twit.png" alt="twit"></div></a></li>		
 				</ul>
 			</nav>
 			<h2>September 23 - 29</h2>
 			<div>
-				<a href="#" title="STL DesignWeek 2013"><img class="logo" src="img/stl.png" alt="stl.png"></a>
+				<a href="#" title="STL DesignWeek 2013"><img class="logo" src="http://4.bp.blogspot.com/-QjT7wbJXvRc/UjTDE0qpA5I/AAAAAAAAAVA/1GbXDzycyRg/s1600/stl.png" alt="stl.png"></a>
 			</div>
 		</div>
 	</header>
