--- a/index.html
+++ b/index.html
@@ -1,37 +1,84 @@
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>$^&#^$@&@$</title>
-	<link rel="stylesheet" href="frag.css">
+	<title>Document</title>
+	<link rel="stylesheet" href="a.css">
+	<script type="text/javascript" src="jquery-2.0.3.js"></script>
+	<script type="text/javascript" src="a.js"></script>
 </head>
 <body>
-	<header>
-		<div>
-			<h1><a href="#" title="STL DesignWeek 2013">stl <strong>design</strong>week</a></h1>
-			<nav class="nav">
-				<div class="kotak">
-					<div class="kotaknav">
-						<ul>
-							<li><a class="anav" href="#">home</a></li>
-							<li><a class="anav" href="#">about</a></li>
-							<li><a class="anav" href="#">sponsor</a></li>
-							<li><a class="anav" href="#">press</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
+	<li>
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+	
+	
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+	
+	
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+	
+	
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+	
+	
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+	
 
-			<nav >
-				<ul>
-					<li><a href="#"><div class="bcd"><img src="http://1.bp.blogspot.com/-8Xs_psAI6U0/UjTDHC8Io6I/AAAAAAAAAVQ/9DO2y148Pm0/s1600/fb.png" alt="fb"></div></a></li>
-					<li><a href="#"><div class="abc"><img src="http://4.bp.blogspot.com/-eNt9Ap2vxA8/UjTDGQS9x9I/AAAAAAAAAVI/UTPKp4_a9hc/s1600/twit.png" alt="twit"></div></a></li>		
-				</ul>
-			</nav>
-			<h2>September 23 - 29</h2>
-			<div>
-				<a href="#" title="STL DesignWeek 2013"><img class="logo" src="http://4.bp.blogspot.com/-QjT7wbJXvRc/UjTDE0qpA5I/AAAAAAAAAVA/1GbXDzycyRg/s1600/stl.png" alt="stl.png"></a>
-			</div>
-		</div>
-	</header>
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+
+		<li>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</li>
+	</li>
 </body>
 </html>
